Initial RS-CNC32 setup

--- a/platformio.ini
+++ b/platformio.ini
@@ -59,6 +59,8 @@ build_flags = ${common.build_flags}
 src_filter = 
 	+<*.h> +<*.s> +<*.S> +<*.cpp> +<*.c> +<*.ino> +<src/>
 	-<.git/> -<data/> -<test/> -<tests/>
+upload_protocol = espota
+upload_port = 192.168.0.89
 
 [env:release]
 lib_deps = 
